[tool.poetry]
name = "ptulsconv"
version = "2.2.2"
description = "Read Pro Tools Text exports and generate PDF ADR Reports, JSON"
authors = ["Jamie Hardt <jamiehardt@me.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
parsimonious = "^0.10.0"
tqdm = "^4.67.1"
reportlab = "^4.4.1"
py-ptsl = "^101.1.0"

[tool.poetry.extras]
doc = ['sphinx', 'sphinx_rtd_theme']

[tool.poetry.scripts]
wavinfo = 'ptulsconv.__main__:main'

[project.urls]
Source = 'https://github.com/iluvcapra/ptulsconv'
Issues = 'https://github.com/iluvcapra/ptulsconv/issues'
Documentation = 'https://ptulsconv.readthedocs.io/'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
