[project]
name = "ptulsconv"
license = { file = "LICENSE" }
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Topic :: Multimedia',
    'Topic :: Multimedia :: Sound/Audio',
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Text Processing :: Filters"
]
requires-python = ">=3.8"
keywords = ["text-processing", "parsers", "film", 
    "broadcast", "editing", "editorial"]

[tool.poetry]
name = "ptulsconv"
version = "3.0.0"
description = "Read Pro Tools Text exports and generate PDF ADR Reports, JSON"
authors = ["Jamie Hardt <jamiehardt@me.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
parsimonious = "^0.10.0"
tqdm = "^4.67.1"
reportlab = "^4.4.1"
py-ptsl = "^101.1.0"
sphinx_rtd_theme = {version= '>= 1.1.1', optional=true}
sphinx = {version= '>= 5.3.0', optional=true}

[tool.poetry.extras]
doc = ['sphinx', 'sphinx_rtd_theme']

[tool.poetry.scripts]
ptulsconv = 'ptulsconv.__main__:main'


[project.urls]
Source = 'https://github.com/iluvcapra/ptulsconv'
Issues = 'https://github.com/iluvcapra/ptulsconv/issues'
Documentation = 'https://ptulsconv.readthedocs.io/'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
