[project]
name = "ptulsconv"
version = "4.0.0"
description = "Read Pro Tools Text exports and generate PDF ADR Reports, JSON"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["text-processing", "parsers", "film", 
    "broadcast", "editing", "editorial"]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Topic :: Multimedia',
    'Topic :: Multimedia :: Sound/Audio',
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Text Processing :: Filters"
]
authors = [{name = "Jamie Hardt", email = "<jamiehardt@me.com>"}]
dependencies = [
    "parsimonious>=0.10.0",
    "py-ptsl>=600.0.0",
    "reportlab>=4.4.4",
    "tqdm>=4.67.1",
]

[project.urls]
Source = 'https://github.com/iluvcapra/ptulsconv'
Issues = 'https://github.com/iluvcapra/ptulsconv/issues'
Documentation = 'https://ptulsconv.readthedocs.io/'

[project.optional-dependencies]
doc = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
]


[project.scripts]
ptulsconv = "ptulsconv:__main__.main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
